# recommendation_app

./: README.md  app.py  knn_model.pkl  pyproject.toml
couses/: MODULE_1.md  MODULE_2.md  MODULE_3.md  MODULE_4.md  MODULE_5.md  MODULE_6.md  MODULE_7.md
data/: .~lock.BX-Books.csv#
recommendation_app/: app.py
templates/: book_detail.html  books.html  distribution.html  edit_book.html  index.html  most_rated.html  ratings.html  recommend.html  training.html  users.html
