[tool.poetry]
name = "recommendation-app"
version = "0.1.0"
description = ""
authors = ["vincent whannou de dravo <vincent.whannou.de.dravo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
